tried fixing the layout issue

--- a/src/styles/resets.sass
+++ b/src/styles/resets.sass
@@ -40,6 +40,7 @@ a
 [type="tel"],
 [type="passowrd"],
 input[type="text"],
+input:not([type]),
 [type="date"],
 select,
 textarea
